# SIGIL

./: .gitignore  .gitmodules  CMakeLists.txt
host/editor/: Makefile  main.cpp  makeAndRun.sh
host/editor/TestStuff/: SurfaceHandler.cpp  SurfaceHandler.hpp  SurfaceTest.cpp  SurfaceTest.hpp  transparency-test.sif
lib/: CMakeLists.txt
